--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -1,362 +1,12 @@
 <h2>Pr&uuml;fung</h2>
-<ng-container *ngIf="allowedMonths.length === 0">
+<ng-container *ngIf="(allowedMonthsLenghtIsZero | async) === true">
     Keine Leistungsnachweise gefunden
 </ng-container>
-<ng-container *ngIf="allowedMonths.length > 0">
-    <button type="button" class="card selectable" (click)="show = 'names'">Sachliche Richtigkeit</button>
-    <button type="button" class="card selectable" (click)="show = 'numbers'">Rechnerische Richtigkeit</button>
-    <button type="button" class="card selectable" (click)="show = 'contract'">Vertragsauslastung</button>
-    <button type="button" class="card selectable" (click)="show = 'trend'">Zeitlicher Verlauf</button>
+<ng-container *ngIf="(allowedMonthsLenghtIsZero | async) === false">
+    <button type="button" class="card selectable" [routerLink]="['names']">Sachliche Richtigkeit</button>
+    <button type="button" class="card selectable" [routerLink]="['numbers']">Rechnerische Richtigkeit</button>
+    <button type="button" class="card selectable" [routerLink]="['utilization']">Vertragsauslastung</button>
+    <button type="button" class="card selectable" [routerLink]="['trend']">Zeitlicher Verlauf</button>
     <h2>Export</h2>
     <button type="button" class="card selectable" (click)="exportAllNumbers()">Leistungsnachweise nach Excel</button>
-</ng-container>
-
-<ng-container *ngIf="show !== 'nothing'">
-    <div class="backdrop" (click)="show = 'nothing'"></div>
-
-    <div class="overlay extended" *ngIf="show === 'names'">
-        <button class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schlie&szlig;en</button>
-        <main>
-            <h1>
-                {{contract.name}}
-            </h1>
-            <p class="center">
-                {{contract.description}}
-            </p>
-            <p>
-                Diese Ansicht erlaubt die Pr&uuml;fung der sachlichen Richtigkeit einer Rechnung. Sie k&ouml;nnen die Ansicht nach Datum oder nach
-                Person sortieren, oder die Daten f&uuml;r den Monat nach Excel exportieren.
-            </p>
-            <p>
-                Au&szlig;erdem k&ouml;nnen Sie einzelne Eintr&auml;ge zur&uuml;ckweisen, und die zur&uuml;gewiesenen Eintr&auml;ge zusammengefasst exportieren.
-            </p>
-            <div class="side-by-side">
-                <div class="card">
-                    Leistungszeitraum:
-                    <select [(ngModel)]="selectedMonth" class="selectable" style="min-width: 6rem;">
-                        <option *ngFor="let month of allowedMonths" [value]="month">
-                            {{month}}
-                        </option>
-                    </select>
-                </div>
-                <div>
-                    <button type="button" class="card selectable" (click)="exportNames()">Monat nach Excel exportieren</button>
-                </div>
-                <div *ngIf="deliverablesRejected">
-                    <button class="card selectable" (click)="exportRejected()" style="margin-left: 1rem;">
-                        Zur&uuml;ckgewiesene Eintr&auml;ge exportieren
-                    </button>
-                </div>
-            </div>
-        </main>
-        <table>
-            <thead>
-                <tr>
-                    <th [ngClass]="{selectable: sort !== 'time'}" tabindex="0" (click)="sort = 'time'" class="no-wrap">
-                        Datum
-                        <ng-container *ngIf="sort === 'time'"> &#8595;</ng-container>
-                    </th>
-                    <th>Uhrzeit</th>
-                    <th>Stunden</th>
-                    <th [ngClass]="{selectable: sort !== 'person'}" tabindex="0" (click)="sort = 'person'" class="no-wrap">
-                        Person
-                        <ng-container *ngIf="sort === 'person'"> &#8595;</ng-container>
-                    </th>
-                    <th *ngIf="keysPresent" class="no-wrap">Schl&uuml;ssel</th>
-                    <th>T&auml;tigkeit</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let row of deliverables">
-                    <td class="no-wrap">
-                        {{row.date.toLocaleDateString()}}
-                    </td>
-                    <td class="no-wrap">
-                        {{row.startTime}} - {{row.endTime}}
-                    </td>
-                    <td class="no-wrap">
-                        {{row.duration * 8}}
-                    </td>
-                    <td class="no-wrap">
-                        {{row.person}}
-                    </td>
-                    <td *ngIf="keysPresent" class="no-wrap">
-                        {{row.key}}
-                    </td>
-                    <td style="white-space: pre-line;">
-                        <button role="img"
-                            class="status-button selectable"
-                            [ngClass]="{red: row.rejected}"
-                            [attr.aria-label]="row.rejected ? 'Zur&uuml;ckgewiesen' : 'Akzeptiert'"
-                            (click)="row.rejected = !row.rejected"></button>
-                        {{row.text}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="overlay" *ngIf="show === 'numbers'">
-        <button type="button" class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</button>
-        <h1>
-            {{contract.name}}
-        </h1>
-        <p class="center">
-            {{contract.description}}
-        </p>
-        <p>
-            Diese Ansicht erlaubt die Pr&uuml;fung der rechnerischen Richtigkeit einer Rechnung. Sind die angezeigten Summen identisch
-            mit den Summen der Rechnung, wurde durch einen zweiten Rechnungsweg gepr&uuml;ft, dass die Rechnung rechnerisch richtig ist.
-        </p>
-        <p>
-            Voraussetzung ist, dass vorher die Eintr&auml;ge sachlich gepr&uuml;ft und ggf. nicht zutreffende Eintr&auml;ge entfernt wurden.
-        </p>
-        <div class="side-by-side">
-            <div class="card">
-                Leistungszeitraum:
-                <select [(ngModel)]="selectedMonth" class="selectable" style="min-width: 6rem;">
-                    <option *ngFor="let month of allowedMonths" [value]="month">
-                        {{month}}
-                    </option>
-                </select>
-            </div>
-            <div>
-                <button type="button" class="card selectable" (click)="exportNumbers()">Zeitraum nach Excel exportieren</button>
-            </div>
-        </div>
-        <table class="center">
-            <thead>
-                <tr>
-                    <th>Preiskategorie</th>
-                    <th>PT</th>
-                    <th>Stunden</th>
-                    <th>Kosten</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let entry of priceCategorySums">
-                    <td>
-                        {{entry[0]}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].days | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].days * 8 | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].price | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <b>Summe (netto)</b>
-                    </td>
-                    <td class="right">
-                        {{sumDays | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="right">
-                        {{sumDays * 8 | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="right">
-                        {{sum | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        MWSt
-                        <input type="number" required="true" [(ngModel)]="taxRate" class="right">
-                        %
-                    </td>
-                    <td class="right">
-                        {{tax | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        <b>Summe (brutto)</b>
-                    </td>
-                    <td class="right">
-                        <b>{{(sum + tax) | number: '1.2-2':'de'}} &#8364;</b>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="overlay" *ngIf="show === 'contract'">
-        <button type="button" class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</button>
-        <h1>
-            {{contract.name}}
-        </h1>
-        <p class="center">
-            {{contract.description}}
-        </p>
-        <p>
-            Diese Ansicht erlaubt die Pr&uuml;fung der Daten und der Auslastung des Vertrags.
-            Die angezeigten Prozentzahlen werden in Relation zur Vertragsdauer  bewertet. Rote Balken bedeuten,
-            dass der Vertrag voraussichtlich zu fr&uuml; ausgesch&ouml;pft sein wird.
-        </p>
-        <table class="center">
-            <thead>
-                <tr>
-                    <td rowspan="2">Element</td>
-                    <td colspan="3" class="center">Finanzen</td>
-                    <td colspan="3" class="center">Personentage</td>
-                    <td>Auslastung</td>
-                </tr>
-                <tr>
-                    <td>Obergrenze</td>
-                    <td>Verbraucht</td>
-                    <td>Verf&uuml;gbar</td>
-                    <td class="no-wrap">Obergrenze PT</td>
-                    <td>Verbraucht</td>
-                    <td>Verf&uuml;gbar</td>
-                    <td class="no-wrap rel">
-                        Zeit:
-                        {{partOfTime | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            style="background-color: turquoise"
-                            [ngStyle]="{width: (partOfTime | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let detail of contract.budgetDetails">
-                    <td class="no-wrap">
-                        {{detail.priceCategory}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{detail.availableFinances | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{getTotalForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{detail.availableFinances - getTotalForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{detail.availableUnits | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{getDaysForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{detail.availableUnits - getDaysForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{detail.availableFinances === 0 ? '-' : getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Summe</b></td>
-                    <td class="no-wrap right">
-                        {{contract.completeBudget.availableFinances | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{totalSum | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{contract.completeBudget.availableFinances - totalSum | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                    <td class="no-wrap right">
-                        {{contract.completeBudget.availableUnits | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{totalDays | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{contract.completeBudget.availableUnits - totalDays | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{totalSum / contract.completeBudget.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * totalSum / contract.completeBudget.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * totalSum / contract.completeBudget.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="overlay" *ngIf="show === 'trend'">
-        <div class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</div>
-        <h1>
-            {{contract.name}}
-        </h1>
-        <p class="center">
-            {{contract.description}}
-        </p>
-        <p>
-            Diese Ansicht zeigt den detaillierten zeitlichen Verlauf der Leistungen und erlaubt, Fehlentwicklungen fr&uuml;zeitig zu erkennen.
-            Die angezeigten Prozentzahlen werden in Relation zur Vertragsdauer  bewertet. Rote Balken bedeuten,
-            dass in diesem Monat das durchschnittlich zur Verf&uuml;gung stehende Budget &uuml;berschritten wurde.
-        </p>
-        <table class="center">
-            <thead>
-                <tr>
-                    <th rowspan="2">Leistungszeitraum</th>
-                    <th rowspan="2" class="no-wrap">geleistete PT</th>
-                    <th class="no-wrap center" [attr.colspan]="contract.budgetDetails.length + 1">% Auslastung</th>
-                </tr>
-                <tr>
-                    <th>Gesamt</th>
-                    <th class="no-wrap" *ngFor="let detail of contract.budgetDetails">
-                        {{detail.priceCategory}}
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let month of allowedMonths">
-                    <td>
-                        {{month.split('-')[1]}}/{{month.split('-')[0]}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{getDaysForMonth(month) | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{getDaysPercentageForMonth(month) | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: getDaysPercentageForMonth(month) > getmonthPercentageForContract(month)}"
-                            [ngStyle]="{width: (getDaysPercentageForMonth(month) | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                    <td class="no-wrap right rel" *ngFor="let detail of contract.budgetDetails">
-                        {{getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) > getmonthPercentageForContract(month)}"
-                            [ngStyle]="{width: (getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Gesamt</b></td>
-                    <td class="no-wrap right">
-                        {{totalDays | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{totalSum / contract.completeBudget.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * totalSum / contract.completeBudget.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * totalSum / contract.completeBudget.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                    <td class="no-wrap right rel" *ngFor="let detail of contract.budgetDetails">
-                        {{detail.availableFinances === 0 ? '-' : getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
 </ng-container>
