--- a/frontend/src/app/contract-trend/contract-trend.component.html
+++ b/frontend/src/app/contract-trend/contract-trend.component.html
@@ -39,6 +39,9 @@
                     <div class="gauge"
                         [ngClass]="{red: getUnitsPercentageForMonthExceedsMonthsPercentageForContract(month) | async}"
                         [ngStyle]="{width: (getUnitsPercentageForMonth(month) | async | number:'1.0-0') + '%'}">
+                        <span class="visually-hidden" *ngIf="getUnitsPercentageForMonthExceedsMonthsPercentageForContract(month) | async">
+                            &Uuml;berdurchschnittlich hoch
+                        </span>
                     </div>
                 </td>
                 <td class="no-wrap right rel" *ngFor="let detail of (contract | async)?.budgetDetails">
@@ -46,6 +49,10 @@
                     <div class="gauge"
                         [ngClass]="{red: getUnitsPercentageForPriceCategoryMonthExceedsMonthsPercentageForContract(detail.priceCategoryId, month) | async}"
                         [ngStyle]="{width: (getUnitsPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | async | number:'1.0-0') + '%'}">
+                        <span class="visually-hidden"
+                            *ngIf="getUnitsPercentageForPriceCategoryMonthExceedsMonthsPercentageForContract(detail.priceCategoryId, month) | async">
+                            &Uuml;berdurchschnittlich hoch
+                        </span>
                     </div>
                 </td>
             </tr>
@@ -66,6 +73,9 @@
                     <div class="gauge"
                         [ngClass]="{red: (getPartOfBudgetForPriceCategory(detail) | async)! > (partOfTime | async)!}"
                         [ngStyle]="{width: (getPartOfBudgetForPriceCategory(detail) | async | number:'1.0-0') + '%'}">
+                        <span class="visually-hidden" *ngIf="(getPartOfBudgetForPriceCategory(detail) | async)! > (partOfTime | async)!">
+                            &Uuml;berdurchschnittlich hoch
+                        </span>
                     </div>
                 </td>
             </tr>
