--- a/frontend/src/app/contract-utilization/contract-utilization.component.html
+++ b/frontend/src/app/contract-utilization/contract-utilization.component.html
@@ -9,7 +9,7 @@
     <p>
         Diese Ansicht erlaubt die Pr&uuml;fung der Daten und der Auslastung des Vertrags.
         Die angezeigten Prozentzahlen werden in Relation zur Vertragsdauer  bewertet. Rote Balken bedeuten,
-        dass der Vertrag voraussichtlich zu fr&uuml; ausgesch&ouml;pft sein wird.
+        dass der Vertrag voraussichtlich zu fr&uuml;h ausgesch&ouml;pft sein wird.
     </p>
 </header>
 <main>
