added back button

--- a/frontend/src/app/contract-names/contract-names.component.html
+++ b/frontend/src/app/contract-names/contract-names.component.html
@@ -30,6 +30,9 @@
                 Zur&uuml;ckgewiesene Eintr&auml;ge exportieren
             </button>
         </div>
+        <div>
+            <button type="button" class="selectable card" [routerLink]="['..']">Zur&uuml;ck zur &Uuml;bersicht</button>
+        </div>
     </div>
 </header>
 <main>
