ng update & npm update & added grunt & receive the version dynamically from package.json

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="toolbar" role="banner">
   <span>{{headerText}}</span>
-  <span>BOAT3 Erweiterungen v2.2.5</span>
+  <span>BOAT3 Erweiterungen v{{version}}</span>
   <div class="spacer"></div>
   <ng-container *ngIf="(authenticated | async) === true">
     <div id="username">
